# chatProject

./: .CMakeLists.txt.swp  .gitignore  .vcpkg.json.swp  CMakeLists.txt  README.md  client.cpp  client.h  database.cpp  main.cpp  room_participants.h  server  server.cpp  server.h  timestamp.h  vcpkg.json  worker_thread.h
.github/workflows/: main.yml
net/: connection.h  thread_safe_queue.h
src/: CMakeLists.txt  chatlog.cpp
